csv header fixed and openAPI json actualiced
